// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetaBoxesSection renders a Custom Fields option 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-4>* {
  min-width: 0;
}

.emotion-6 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<fieldset
  class="preferences-modal__section"
>
  <legend
    class="preferences-modal__section-legend"
  >
    <h2
      class="preferences-modal__section-title"
    >
      Advanced panels
    </h2>
  </legend>
  <div
    class="preferences-modal__section-content"
  >
    <div
      class="preference-base-option"
    >
      <div
        class="components-base-control components-toggle-control emotion-0 emotion-1"
      >
        <div
          class="components-base-control__field emotion-2 emotion-3"
        >
          <div
            class="components-flex components-h-stack emotion-4 emotion-5"
            data-wp-c16t="true"
            data-wp-component="HStack"
          >
            <span
              class="components-form-toggle"
            >
              <input
                class="components-form-toggle__input"
                id="inspector-toggle-control-0"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-flex-item components-flex-block components-toggle-control__label emotion-6 emotion-5"
              data-wp-c16t="true"
              data-wp-component="FlexBlock"
              for="inspector-toggle-control-0"
            >
              Custom fields
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`MetaBoxesSection renders a Custom Fields option and meta box options 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-4>* {
  min-width: 0;
}

.emotion-6 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<fieldset
  class="preferences-modal__section"
>
  <legend
    class="preferences-modal__section-legend"
  >
    <h2
      class="preferences-modal__section-title"
    >
      Advanced panels
    </h2>
  </legend>
  <div
    class="preferences-modal__section-content"
  >
    <div
      class="preference-base-option"
    >
      <div
        class="components-base-control components-toggle-control emotion-0 emotion-1"
      >
        <div
          class="components-base-control__field emotion-2 emotion-3"
        >
          <div
            class="components-flex components-h-stack emotion-4 emotion-5"
            data-wp-c16t="true"
            data-wp-component="HStack"
          >
            <span
              class="components-form-toggle"
            >
              <input
                class="components-form-toggle__input"
                id="inspector-toggle-control-3"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-flex-item components-flex-block components-toggle-control__label emotion-6 emotion-5"
              data-wp-c16t="true"
              data-wp-component="FlexBlock"
              for="inspector-toggle-control-3"
            >
              Custom fields
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="preference-base-option"
    >
      <div
        class="components-base-control components-toggle-control emotion-0 emotion-1"
      >
        <div
          class="components-base-control__field emotion-2 emotion-3"
        >
          <div
            class="components-flex components-h-stack emotion-4 emotion-5"
            data-wp-c16t="true"
            data-wp-component="HStack"
          >
            <span
              class="components-form-toggle is-checked"
            >
              <input
                checked=""
                class="components-form-toggle__input"
                id="inspector-toggle-control-4"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-flex-item components-flex-block components-toggle-control__label emotion-6 emotion-5"
              data-wp-c16t="true"
              data-wp-component="FlexBlock"
              for="inspector-toggle-control-4"
            >
              Meta Box 1
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="preference-base-option"
    >
      <div
        class="components-base-control components-toggle-control emotion-0 emotion-1"
      >
        <div
          class="components-base-control__field emotion-2 emotion-3"
        >
          <div
            class="components-flex components-h-stack emotion-4 emotion-5"
            data-wp-c16t="true"
            data-wp-component="HStack"
          >
            <span
              class="components-form-toggle is-checked"
            >
              <input
                checked=""
                class="components-form-toggle__input"
                id="inspector-toggle-control-5"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-flex-item components-flex-block components-toggle-control__label emotion-6 emotion-5"
              data-wp-c16t="true"
              data-wp-component="FlexBlock"
              for="inspector-toggle-control-5"
            >
              Meta Box 2
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</fieldset>
`;

exports[`MetaBoxesSection renders meta box options 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-4>* {
  min-width: 0;
}

.emotion-6 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<fieldset
  class="preferences-modal__section"
>
  <legend
    class="preferences-modal__section-legend"
  >
    <h2
      class="preferences-modal__section-title"
    >
      Advanced panels
    </h2>
  </legend>
  <div
    class="preferences-modal__section-content"
  >
    <div
      class="preference-base-option"
    >
      <div
        class="components-base-control components-toggle-control emotion-0 emotion-1"
      >
        <div
          class="components-base-control__field emotion-2 emotion-3"
        >
          <div
            class="components-flex components-h-stack emotion-4 emotion-5"
            data-wp-c16t="true"
            data-wp-component="HStack"
          >
            <span
              class="components-form-toggle is-checked"
            >
              <input
                checked=""
                class="components-form-toggle__input"
                id="inspector-toggle-control-1"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-flex-item components-flex-block components-toggle-control__label emotion-6 emotion-5"
              data-wp-c16t="true"
              data-wp-component="FlexBlock"
              for="inspector-toggle-control-1"
            >
              Meta Box 1
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="preference-base-option"
    >
      <div
        class="components-base-control components-toggle-control emotion-0 emotion-1"
      >
        <div
          class="components-base-control__field emotion-2 emotion-3"
        >
          <div
            class="components-flex components-h-stack emotion-4 emotion-5"
            data-wp-c16t="true"
            data-wp-component="HStack"
          >
            <span
              class="components-form-toggle is-checked"
            >
              <input
                checked=""
                class="components-form-toggle__input"
                id="inspector-toggle-control-2"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
            </span>
            <label
              class="components-flex-item components-flex-block components-toggle-control__label emotion-6 emotion-5"
              data-wp-c16t="true"
              data-wp-component="FlexBlock"
              for="inspector-toggle-control-2"
            >
              Meta Box 2
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</fieldset>
`;
